assets/css/index.scss
---
---

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  // BACKGROUND COLOR NEEDS TO BE ADDED
  // IF NOT, FIREFOX WON'T APPLY THE FILTER PROPERLY
  // WHEN CALLED
  background: #fff;
  height: 100%;
}

body {
  font-family: "Quicksand", sans-serif;
  background: #fff;
  color: #666;
  font-size: 14px;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100%;
}

body > div {
  max-width: 408px;
  min-width: 300px;
  margin: 0 auto;
  padding: 1rem;
}

img {
  width: 40%;
  float: right;
  border: 1px solid #666;
  border-radius: 50%;
  margin: 15px 0 10px 10px;
  box-shadow: 0 1px 4px;
}

h1 {
  display: none;
}

h2 {
  margin-top: 3em;
  margin-bottom: 2.5em;
  font-size: 24px;
  font-weight: 400;
}

a {
  color: #000;

  & img {
    text-decoration: none;
  }
}

p {
  a {
    text-decoration: underline;

    &:hover {
      color: #009999;
    }
  }
}

dt {
  width: 25%;
  margin-bottom: 10px;
}

dd,
dt {
  display: inline-block;
}

dd {
  width: 70%;
}

dt.space {
  margin-top: 0.6rem;
}

ul {
  list-style: none;
  margin-bottom: 2em;

  li {
    margin-bottom: 0.75em;
  }
}

em {
  font-style: normal;
  text-decoration: underline;
}
@media (max-width: 500px) {
}

@media (min-width: 800px) {
  body {
    font-size: 18px;
  }

  body > div {
    width: 500px;
    max-width: 500px;
  }

  img {
    width: 30%;
    margin: 5px;
  }
}

.screen-readers-only {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.pulse {
  width: 100%;
  height: 3px;
  animation: pulse 5s cubic-bezier(0.4, 0, 0.2, 1) infinite;
  animation-delay: 2.5s;
  background-image: linear-gradient(
    to bottom right,
    #fc2727 0%,
    #2f2cfc 25%,
    #fdbf33 50%,
    #37fed0 75%,
    #18fdf2 100%
  );
}
// Removing animation if user enabled the `Reduce Motion` option
// via operational system and/or browser
// More details about `prefers-reduced-motion` in https://web.dev/prefers-reduced-motion/
@media (prefers-reduced-motion: reduce) {
  .pulse {
    animation: none;
  }
}

@keyframes pulse {
  50% {
    opacity: 0.4;
  }
  0%,
  20%,
  80%,
  100% {
    opacity: 1;
  }
}

